1) Fixes the nav bar with collapsable content 2) Remove the restore

--- a/playground/templates/static/styles.css
+++ b/playground/templates/static/styles.css
@@ -1,16 +1,15 @@
 /* Adding Styles to Nav Bar in base.html */
-.mr-auto { /* add margin to the left of the first div */
-    margin-left: 20px;
+.navbar #nav-title {
+    margin-left: 10%;
 }
 
-.ml-auto { /* add margin to the right of the last div */
-    margin-right: 20px;
+.navbar .navbar-collapse {
+    margin-right: 10%;
 }
 
-.my-nav .btn { /* Increase the button inside nav bar*/
-    font-size: 20px;
+.navbar .navbar-toggler {
+    margin-right: 10%;
 }
-
 
 /* Adding Styles to crime_map_index.html */
 #body-container {
